--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,5 +1,7 @@
 // Colors //
-
+$white: white;
+$black: black;
+$charcoal: #333333;
 
 // Functional Colors //
 
@@ -8,3 +10,5 @@
 
 
 // Asset Paths //
+$path-font: "../../fonts";
+$path-img: "../img";
