--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -1,9 +1,39 @@
 .overLord {
   @include outer-container;
-
+  margin-top: 1%;
+  padding: 2%;
+  h1 {
+    text-align: center;
+  }
 }
 header {
-  text-align: center;
+  margin: 0;
+  position: relative;
+  background-color: $black;
+
+  video {
+    margin-bottom: -6px;
+    opacity: .7;
+    width: 100%;
+  }
+  h1 {
+    @include fontBasics("UrbanJungle", $color:white, $font-size: 10em);
+    @include position(absolute, $width: 100%, $bottom: 32%);
+    @extend %textCenter;
+    @media (max-width: 650px) {
+      font-size: 3em;
+    }
+
+
+  }
+  p {
+    @include fontBasics("UrbanJungle", $color:white, $font-size: 2.6em);
+    @include position(absolute, $width: 100%, $bottom: 32%);
+    @extend %textCenter;
+    @media (max-width: 650px) {
+      display: none;
+    }
+  }
 }
 .column1 {
   @include span-columns(9);
@@ -13,7 +43,8 @@ header {
 .column2 {
   @include span-columns(3);
   border: 1px solid black;
-  padding: 1%;
+  padding: 2%;
+  border-radius: 2em;
   text-align: center;
   li {
     list-style: none;
@@ -23,4 +54,38 @@ header {
 
   img {
     height: 10vh;  }
+}
+.results {
+  display: none;
+  text-shadow: 1px 1px 2px white;
+  padding: 5%;
+  float: left;
+	margin:10px;
+	border:1px solid rgba(0,0,0,0.5);
+	border-radius:10px 10px 10px 10px;
+	-webkit-box-shadow:
+		0 2px 6px rgba(0,0,0,0.5),
+		inset 0 1px rgba(255,255,255,0.3),
+		inset 0 10px rgba(255,255,255,0.2),
+		inset 0 10px 20px rgba(255,255,255,0.25),
+		inset 0 -15px 30px rgba(0,0,0,0.3);
+	-moz-box-shadow:
+		0 2px 6px rgba(0,0,0,0.5),
+		inset 0 1px rgba(255,255,255,0.3),
+		inset 0 10px rgba(255,255,255,0.2),
+		inset 0 10px 20px rgba(255,255,255,0.25),
+		inset 0 -15px 30px rgba(0,0,0,0.3);
+	box-shadow:
+		0 2px 6px rgba(0,0,0,0.5),
+		inset 0 1px rgba(255,255,255,0.3),
+		inset 0 10px rgba(255,255,255,0.2),
+		inset 0 10px 20px rgba(255,255,255,0.25),
+		inset 0 -15px 30px rgba(0,0,0,0.3);
+	background:rgba(0,0,0,0.25);
+  .key {
+    font-weight: bold;
+  }
+  .title {
+    color: orange;
+  }
 }
