--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -53,39 +53,20 @@ header {
 .userProfiles {
 
   img {
-    height: 10vh;  }
+    height: 10vh;
+  }
 }
 .results {
+  @extend %soBubble;
   display: none;
-  text-shadow: 1px 1px 2px white;
   padding: 5%;
   float: left;
-	margin:10px;
-	border:1px solid rgba(0,0,0,0.5);
-	border-radius:10px 10px 10px 10px;
-	-webkit-box-shadow:
-		0 2px 6px rgba(0,0,0,0.5),
-		inset 0 1px rgba(255,255,255,0.3),
-		inset 0 10px rgba(255,255,255,0.2),
-		inset 0 10px 20px rgba(255,255,255,0.25),
-		inset 0 -15px 30px rgba(0,0,0,0.3);
-	-moz-box-shadow:
-		0 2px 6px rgba(0,0,0,0.5),
-		inset 0 1px rgba(255,255,255,0.3),
-		inset 0 10px rgba(255,255,255,0.2),
-		inset 0 10px 20px rgba(255,255,255,0.25),
-		inset 0 -15px 30px rgba(0,0,0,0.3);
-	box-shadow:
-		0 2px 6px rgba(0,0,0,0.5),
-		inset 0 1px rgba(255,255,255,0.3),
-		inset 0 10px rgba(255,255,255,0.2),
-		inset 0 10px 20px rgba(255,255,255,0.25),
-		inset 0 -15px 30px rgba(0,0,0,0.3);
-	background:rgba(0,0,0,0.25);
   .key {
     font-weight: bold;
   }
   .title {
+    font-size: 1.3em;
     color: orange;
+    text-shadow: 1px 1px 2px $black;
   }
 }
