--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -38,3 +38,18 @@
     padding: 2px;
   }
 }
+.snoopButton {
+  border: 2px solid grey;
+  width: 15%;
+  height: 30px;
+  font-size: 1em;
+  border-radius: 4px;
+  box-shadow: 2px 2px 4px black;
+  &:hover {
+    cursor: pointer;
+  }
+  &:active {
+    box-shadow: none;
+  }
+
+}
