--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -7,6 +7,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  text-align: center;
   p {
     align-self: center;
   }
