--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -11,7 +11,7 @@ html, body {
   padding: 0;
   cursor: url("../../img/ImpressionSelect.cur") auto;
   font-family: 'Titillium Web', sans-serif;
-  background-image: url("../../img/abstractWhite.jpg");
+  background-image: url("../../img/abstractWhite2.jpg");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
