--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -25,6 +25,7 @@
   }
 }
 .namesHint {
+  margin-left: 4px;
   padding: 1px;
   font-size: 11px;
   border: 1px dotted $black;
@@ -32,10 +33,8 @@
   background-color: orange;
   font-weight: bold;
   &:hover:after {
-    left: 35%;
-    bottom: 20%;
-    content: " Try these names: swagner23q, yvonnapc, patternandshape, or RobinBKing";
-    padding: 2px;
+    content: " --Try these names: swagner23q, yvonnapc, patternandshape, or RobinBKing";
+    width: 25%;
   }
 }
 .snoopButton {
@@ -45,6 +44,7 @@
   font-size: 1em;
   border-radius: 4px;
   box-shadow: 2px 2px 4px black;
+  margin-left: 15px;
   &:hover {
     cursor: pointer;
   }
